test: add test PaymentServiceImpTest to test maximum allowed

--- a/paymentService/src/main/resources/application.yml
+++ b/paymentService/src/main/resources/application.yml
@@ -36,3 +36,9 @@ springdoc:
     path: /swagger-ui.html
     operationsSorter: method
     tagsSorter: alpha
+
+
+#CONSTANTS
+payment:
+  validation:
+    maximum-allowed-amount: 1000.0
